# snake-engine

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SPEC.md  config.toml  entrypoint.sh
.claude/agents/: engineer.md  staff.md
.claude/skills/rust-check/: SKILL.md
.github/workflows/: ci.yml  deploy-mcp.yml
mcp/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
mcp/src/: index.ts  tools.ts
src/: config.rs  geo.rs  leaderboard.rs  lib.rs  main.rs
src/game/: board.rs  engine.rs  mod.rs  snake.rs
src/net/: mod.rs  protocol.rs  server.rs  session.rs
tests/: integration.rs
