
[package]
name = "oxidar-snake"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "1.0.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28"
rmp-serde = "1"
rand = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
